added the test set score

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -555,6 +555,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lets see the performance of Random forest in the test set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The F1 Score on the testing dataset is 91.21% \n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test_pred = rf_model.predict(x_test)\n",
+    "\n",
+    "test_f1_score = f1_score(y_test, y_test_pred)\n",
+    "\n",
+    "print(f\"The F1 Score on the testing dataset is { np.round(test_f1_score*100,2)}% \")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
